# context_builder

./: .gitignore  ContextBuilder-CLI.spec  ContextBuilder-GUI.spec  LICENSE  README.md  build.py  main.py  main_gui.py  pyproject.toml  requirements.txt
gui/: __init__.py  about_tab.py  app.py  convert_tab.py  delete_tab.py  files_tab.py  icons.py  main_window.py  scan_tab.py  settings_tab.py  styles.py  widgets.py  workers.py
src/: __init__.py  chunker.py  cli.py  clipboard.py  config.py  converter.py  exporter.py  menu.py  preview.py  redactor.py  scanner.py  session.py  token_counter.py
src/utils/: __init__.py  encoding.py  file_filter.py  filename.py  safety.py
